{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 8,
  "lineage": "e7f0354c-73c3-a4ba-37cc-f4cbceb51491",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ca3ca175f37dd66",
            "arn": "arn:aws:ec2:us-east-1:586869554856:instance/i-0197adc0e88265ecf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0197adc0e88265ecf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mynewkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0120aedc9f0813557",
            "private_dns": "ip-172-31-92-76.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.92.76",
            "public_dns": "ec2-52-86-219-148.compute-1.amazonaws.com",
            "public_ip": "52.86.219.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08a420e769026c53e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "northvirgina-usa-uat-securitygroup"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0378b92a8650a1f87",
            "tags": {
              "Environment": "Global",
              "Name": "Terraform State",
              "ServiceProvider": "Megha",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Global",
              "Name": "Terraform State",
              "ServiceProvider": "Megha",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024b3268aaeaf66a4"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecuritygroup"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ca3ca175f37dd66",
            "arn": "arn:aws:ec2:us-east-1:586869554856:instance/i-0b475e33a8c171caa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b475e33a8c171caa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mynewkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066d5ded251158a47",
            "private_dns": "ip-172-31-83-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.83.128",
            "public_dns": "ec2-3-82-106-127.compute-1.amazonaws.com",
            "public_ip": "3.82.106.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f6513b09ffbfac46",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "northvirgina-usa-uat-securitygroup"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0378b92a8650a1f87",
            "tags": {
              "Environment": "Global",
              "Name": "Terraform State",
              "ServiceProvider": "Megha",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Global",
              "Name": "Terraform State",
              "ServiceProvider": "Megha",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-024b3268aaeaf66a4"
            ]
          },
          "dependencies": [
            "aws_security_group.mysecuritygroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dbsecuritygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586869554856:security-group/sg-073c1967bd033c13b",
            "description": "Allow communication from  these ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073c1967bd033c13b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "To ",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-024b3268aaeaf66a4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "northvirgina-usa-uat-dbsecuritygroup",
            "name_prefix": "",
            "owner_id": "586869554856",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Global",
              "Name": "Terraform State",
              "ServiceProvider": "Megha",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Global",
              "Name": "Terraform State",
              "ServiceProvider": "Megha",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffbaa3ea8d016b28"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.mysecuritygroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysecuritygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586869554856:security-group/sg-024b3268aaeaf66a4",
            "description": "Allow communication from  these ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024b3268aaeaf66a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "To ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "To allow connectivity at port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "northvirgina-usa-uat-securitygroup",
            "name_prefix": "",
            "owner_id": "586869554856",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Global",
              "Name": "Terraform State",
              "ServiceProvider": "Megha",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Global",
              "Name": "Terraform State",
              "ServiceProvider": "Megha",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffbaa3ea8d016b28"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}